# unicode

./: .gitignore  .ocamlformat  FTS.opam  README.md  dune-project  unicode.opam
src/: dmetaphone.cpp  dmetaphone.ml  dune  runtime.js  unicode.ml  unicode.mli
src/FTS/: basic.ml  dune  english_stopwords.ml  evaluate.ml  normalizers.ml  parsers.ml  parsing.ml  test_evaluate.ml  test_normalize.ml  test_parse.ml  test_parsing.ml  test_tokenize.ml  test_tsquery.ml  test_tsvector.ml  tokenizers.ml  tsquery.ml  tsvector.ml
src/unicode/: dmetaphone.ml  dune  unaccent_rules.ml  unicode.ml  unicode.mli
src/unicode/utf8conv/: utf8conv.ml  utf8conv.mli
src/utf8conv/: dune  utf8conv.ml
test/: dmetaphone.cpp  dmetaphone_cpp.ml  download.sh  dune  french.txt  license_english.txt  license_french.txt  license_pinyin.txt  pinyin.txt  test_dmetaphone.ml  test_unicode.ml
