opam-version: "2.0"
maintainer: "Asemio"
authors: [
  "Simon Grondin"
]
synopsis: "Asemio's Unicode lib"
description: """
Postgresql tsquery/tsvector generators
"""
license: "MIT"
tags: []
homepage: "https://github.com/asemio/unicode"
doc: "https://github.com/asemio/unicode"
bug-reports: "https://github.com/asemio/unicode/issues"
depends: [
  "ocaml" { >= "4.10.0" }
  "dune" { >= "1.9.0"}

  "ocamlformat" { = "0.18.0" }

  "core_kernel" { >= "v0.14.0" }

  "angstrom" { >= "0.15.0" }

  "ppx_deriving" { >= "4.4.1" }
]
build: ["dune" "build" "-p" name "-j" jobs]
