opam-version: "2.0"
maintainer: "Asemio"
authors: [
  "Simon Grondin"
]
synopsis: "Asemio's Unicode lib"
description: """
Collection of string functions operating at the grapheme cluster level.
"""
license: "MIT"
tags: []
homepage: "https://github.com/asemio/unicode"
doc: "https://github.com/asemio/unicode"
bug-reports: "https://github.com/asemio/unicode/issues"
depends: [
  "ocaml" { >= "4.11.0" }
  "dune" { >= "1.9.0"}

  "core" { >= "v0.15.0" }

  "uucp"
  "uunf"
  "uuseg"
  "uutf"

  "ppx_deriving" { >= "4.4.1" }

  "ppx_blob" { with-test }
  # "ocamlformat" { = "0.25.1" & with-test }
  # "ocaml-lsp-server"
]
build: ["dune" "build" "-p" name "-j" jobs]
